[package]
name = "n_body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
ode_solvers = "0.3.7"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[[example]]
name = "kepler_orbit"
path = "examples/kepler_orbit.rs"

[[example]]
name = "solar_system"
path = "examples/solar_system.rs"

[[example]]
name = "sun_earth"
path = "examples/sun_earth.rs"
